Inserção de imagens e Porjetos

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h1 class="hero-title">
                     <span class="title-line">Olá, eu sou</span>
                     <span class="title-line highlight">Robson Pereira</span>
-                    <span class="title-line typing-text">Desenvolvedor Criativo</span>
+                    <span class="title-line typing-text">Desenvolvedor FullStack</span>
                 </h1>
                 <p class="hero-subtitle">Desenvolvedor apaixonado por transformar ideias em soluções eficientes. Tenho experiência em desenvolvimento web, automações com Python e construção de sistemas práticos que resolvem problemas reais. Busco oportunidades para aplicar minhas habilidades em projetos desafiadores, sempre com foco em qualidade, desempenho e inovação.</p>
                 <div class="hero-buttons">
@@ -85,31 +85,46 @@
         <section id="skills" class="skills-section">
             <h2 class="section-title">Habilidades</h2>
             <div class="skills-grid">
+                
                 <div class="skill-card glass-card" data-aos="fade-up">
-                    <div class="skill-icon"><i class="fas fa-code"></i></div>
+                    <div class="skill-icon">
+                    <i class="fas fa-code"></i></div>
                     <h3>Desenvolvimento Web</h3>
                     <p>HTML5, CSS3, JavaScript, React, Vue, Node.js</p>
                     <div class="skill-progress">
-                        <div class="progress-bar" style="width: 90%"></div>
+                        <div class="progress-bar python-progress" style="width: 0" data-width="85"></div>
                     </div>
                 </div>
+              
+
                 <!-- Mais cards de habilidades -->
                  <div class="skill-card glass-card" data-aos="fade-up" data-aos-delay="150">
                     <div class="skill-icon">
-                        <i class="fab fa-python"></i>
-                        <div class="python-snake"></div> <!-- Elemento decorativo -->
+                    <i class="fab fa-python"></i>
+                    <div class="python-snake"></div> <!-- Elemento decorativo -->
                     </div>
                     <h3>Python Full Stack</h3>
                     <p class="skill-tags">
-                        <span class="tag">Django</span>
-                        <span class="tag">Flask</span>
-                        <span class="tag">Data Science</span>
-                        <span class="tag">Automação</span>
+                        <p>Django, Flask, Bot City, Automação </p>                        
+                    </p>
+                    <div class="skill-progress">
+                    <div class="progress-bar python-progress" style="width: 0" data-width="85"></div>
+                    </div>
+                </div>
+
+                <div class="skill-card glass-card" data-aos="fade-up" data-aos-delay="150">
+                    <div class="skill-icon">
+                        <i class="fas fa-database"></i>
+                        <div class="python-snake"></div> <!-- Elemento decorativo -->
+                    </div>
+                    <h3>Data Base</h3>
+                    <p class="skill-tags">
+                        <p>SQL, MYSQL, ORACLE</p>                        
                     </p>
                     <div class="skill-progress">
                         <div class="progress-bar python-progress" style="width: 0" data-width="85"></div>
                     </div>
-                    <div class="skill-level">Avançado</div>
+                    <!--<div class="skill-level">Avançado</div>-->
                 </div>
             </div>
 
@@ -121,15 +136,53 @@
             <div class="portfolio-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="projeto1.jpg" alt="Projeto 1">
+                        <img src="academia_page.jpeg" alt="Projeto 1">
                         <div class="project-overlay">
-                            <h3>Nome do Projeto</h3>
+                            <h3>Landing Page</h3>
                             <p>Tecnologias usadas</p>
-                            <a href="#" class="project-link">Ver Detalhes</a>
+                            <p>Html, Css e JavaScript</p>
+                            <a href="https://robson892.github.io/landingpage-academia/" class="project-link" target="_blank">Ver Detalhes</a>
                         </div>
                     </div>
                 </div>
                 <!-- Mais cards de projetos -->
+                 <div class="portfolio-grid">
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="gitcommand.jpeg" alt="Projeto 1">
+                        <div class="project-overlay">
+                            <h3>Painel Git Command</h3>
+                            <p>Tecnologias usadas</p>
+                            <p>Html, Python e Flask</p>
+                            <a href="https://github.com/Robson892/painel_git_command" class="project-link" target="_blank">Ver Detalhes</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-grid">
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="businessdatainsights.jpeg" alt="Projeto 1">
+                        <div class="project-overlay">
+                            <h3>Business Data Insights</h3>
+                            <p>Tecnologias usadas</p>
+                            <p>Python, Streamlit, Pandas, Matplotib, Pdfkit, Openpyxl</p>
+                            <a href="https://github.com/Robson892/business-data-insights" class="project-link" target="_blank">Ver Detalhes</a>
+                        </div>
+                    </div>
+                </div>
+                 <div class="portfolio-grid">
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="gitcommand.jpeg" alt="Projeto 1">
+                        <div class="project-overlay">
+                            <h3>Painel Git Command</h3>
+                            <p>Tecnologias usadas</p>
+                            <p>Html, Python e Flask</p>
+                            <a href="https://github.com/Robson892/painel_git_command" class="project-link" target="_blank">Ver Detalhes</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
@@ -165,10 +218,8 @@ Minha filosofia de trabalho é centrada em três pilares: clareza, eficiência e
                 <button type="submit" class="btn-primary">Enviar Mensagem</button>
             </form>
             <div class="social-links">
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-behance"></i></a>
-                <a href="#"><i class="fab fa-dribbble"></i></a>
+                <a href="https://github.com/Robson892"><i class="fab fa-github"></i></a>
+                <a href="www.linkedin.com/in/robson892"><i class="fab fa-linkedin"></i></a>
             </div>
         </section>
     </main>
@@ -179,6 +230,7 @@ Minha filosofia de trabalho é centrada em três pilares: clareza, eficiência e
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script rel="script" href="scripts.js"></script>
+    <script src="scripts.js"></script>
+
 </body>
 </html>
