Ajuste card habilidades Desenvolvimento Web

--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
             <h2 class="section-title">Habilidades</h2>
             <div class="skills-grid">
                 
-                <div class="skill-card glass-card" data-aos="fade-up">
+                <div class="skill-card glass-card" data-aos="fade-up" data-aos-delay="150">
                     <div class="skill-icon">
                     <i class="fas fa-code"></i></div>
+                    <div class="python-snake"></div> <!-- Elemento decorativo -->
                     <h3>Desenvolvimento Web</h3>
                     <p>HTML5, CSS3, JavaScript, React, Vue, Node.js</p>
                     <div class="skill-progress">
