Atualização do formulario

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio</title>
+    <title></>Portfólio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css" >
 </head>
@@ -109,7 +109,7 @@
                         <p>Django, Flask </p>                        
                     </p>
                     <div class="skill-progress">
-                    <div class="progress-bar python-progress" style="width: 0" data-width="95"></div>
+                    <div class="progress-bar python-progress" style="width: 0" data-width="90"></div>
                     </div>
                 </div>
 
@@ -136,7 +136,7 @@
                     <p>BotCity, Selenium, Automação de Processos</p>                        
                 </p>
                 <div class="skill-progress">
-                    <div class="progress-bar python-progress" style="width: 0" data-width="90"></div>
+                    <div class="progress-bar python-progress" style="width: 0" data-width="75"></div>
                 </div>
             </div>
 
@@ -150,7 +150,7 @@
                     <p>AWS, Azure, Docker</p>                        
                 </p>
                 <div class="skill-progress">
-                    <div class="progress-bar python-progress" style="width: 0" data-width="80"></div>
+                    <div class="progress-bar python-progress" style="width: 0" data-width="65"></div>
                 </div>
             </div>
             
@@ -236,7 +236,7 @@ Minha filosofia de trabalho é centrada em três pilares: clareza, eficiência e
 
         <section id="contact" class="contact-section">
             <h2 class="section-title">Vamos Conversar</h2>
-            <form class="contact-form glass-card">
+            <form id="meuFormulario" class="contact-form glass-card">
                 <div class="form-group">
                     <input type="text" placeholder="Seu Nome" required>
                 </div>
