Ajuste do responsividade

--- a/index.html
+++ b/index.html
@@ -16,20 +16,19 @@
             <span class="logo-text">Portifólio</span>
             <span class="logo-icon">/></span>
         </div>
-        <nav class="nav-links">
-            <a href="#home" class="nav-link hover-underline">Home</a>
-            <a href="#work" class="nav-link hover-underline">Projetos</a>
-            <a href="#about" class="nav-link hover-underline">Sobre</a>
-            <a href="#contact" class="nav-link hover-underline">Contato</a>
-        </nav>
-        <div class="theme-switcher">
-            <i class="fas fa-moon"></i>
-        </div>
-        <div class="menu-toggle">
+        <div class="menu-toggle" id="menu-toggle">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
-        </div>
+            </div>
+
+            <nav class="nav-links" id="nav-links">
+            <a href="#home" class="nav-link hover-underline">Início</a>
+            <a href="#sobre" class="nav-link hover-underline">Sobre</a>
+            <a href="#projetos" class="nav-link hover-underline">Projetos</a>
+            <a href="#contato" class="nav-link hover-underline">Contato</a>
+            </nav>
+
     </header>
 
     <main>
