--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             </div>
 
             <nav class="nav-links" id="nav-links">
-            <a href="#home" class="nav-link hover-underline">Início</a>
-            <a href="#sobre" class="nav-link hover-underline">Sobre</a>
-            <a href="#projetos" class="nav-link hover-underline">Projetos</a>
-            <a href="#contato" class="nav-link hover-underline">Contato</a>
+                <a href="#home" class="nav-link hover-underline">Início</a>
+                <a href="#about" class="nav-link hover-underline">Sobre</a>
+                <a href="#work" class="nav-link hover-underline">Projetos</a>
+                <a href="#contact" class="nav-link hover-underline">Contato</a>
             </nav>
 
     </header>
